# app/models/device-profile/index.js
@@ -2,6 +2,7 @@
 const { load, list } = require('../model-lib')
 const R = require('ramda')
 const { getUpdates, validateSchema } = require('../../lib/utils')
+const { prune } = require('dead-leaves')
 
 //* *****************************************************************************
 // Fragments for how the data should be returned from Prisma.
@@ -21,12 +22,16 @@ const fragments = {
 // ******************************************************************************
 // Helpers
 // ******************************************************************************
-const validateNwkSettings = validateSchema('networkSettings failed validation', require('./nwk-settings-schema.json'))
+const validateNwkSettings = validateSchema(
+  'DeviceProfile.networkSettings failed validation',
+  require('./nwk-settings-schema.json')
+)
 
 // ******************************************************************************
 // Model Functions
 // ******************************************************************************
 async function create (ctx, { data, origin }) {
+  data = { ...data, networkSettings: prune(data.networkSettings) }
   validateNwkSettings(data.networkSettings)
   const rec = await ctx.db.create({ data })
   await ctx.$m.networkType.forAllNetworks({
@@ -51,6 +56,7 @@ async function create (ctx, { data, origin }) {
 
 async function update (ctx, { where, data, origin }) {
   if (data.networkSettings) {
+    data = { ...data, networkSettings: prune(data.networkSettings) }
     validateNwkSettings(data.networkSettings)
   }
   const rec = await ctx.db.update({ where, data })
@@ -67,30 +73,31 @@ async function update (ctx, { where, data, origin }) {
 }
 
 async function upsert (ctx, { data, ...args }) {
-  let rec = await ctx.$self.load({ where: { name: data.name } })
-  if (!rec) return ctx.$self.create({ ...args, data })
+  let rec
+  try {
+    rec = await ctx.$self.load({ where: { name: data.name } })
+  }
+  catch (err) {
+    if (err.statusCode === 404) return ctx.$self.create({ ...args, data })
+    throw err
+  }
   data = getUpdates(rec, data)
   return R.empty(data) ? rec : ctx.$self.update({ ...args, where: { id: rec.id }, data })
 }
 
-async function remove (ctx, id) {
+async function remove (ctx, { id }) {
   var rec = await ctx.db.load({ where: { id } })
   // Delete deviceNetworkTypeLinks
-  for await (let devState of ctx.$m.device.listAll({ where: { deviceProfile: { id } } })) {
-    let ids = devState.records.map(R.prop('id'))
-    for await (let state of ctx.$m.deviceNetworkTypeLink.removeMany({ where: { device: { id_in: ids } } })) {
-    }
+  for await (let _ of ctx.$m.deviceNetworkTypeLink.removeMany({ where: { deviceProfile: { id } } })) {
   }
   // Don't delete the local record until the remote operations complete.
   await ctx.$m.networkType.forAllNetworks({
     networkTypeId: rec.networkType.id,
-    op: async network => ctx.$m.networkDeployment.updateByQuery({
-      where: { network: { id: network.id }, deviceProfile: { id: rec.id } },
-      data: {
-        status: 'REMOVED'
+    op: async network => {
+      let where = { network: { id: network.id }, deviceProfile: { id: rec.id } }
+      for await (let _ of ctx.$m.networkDeployment.removeMany({ where })) {
       }
-    })
-    // op: network => ctx.$m.networkProtocol.deleteDeviceProfile({ network, deviceProfileId: id })
+    }
   })
   await ctx.db.remove(id)
 }
